--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,34 @@
-@font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
+html,
 body {
-	background: #fff;	
+	background: #fff;
 	height: 100%;
 	width: 100%;
 	margin: 0;
 	padding: 0;
- 
 }
 
 #container {
-	background:#fff;
-	background-size: 100% 100%;
-	margin: 0 5% 0;
+	background: url(images/car.jpg);
+	background-size: cover;
 	height: 100%;
-	width: 90%;
 	position:relative;
-	min-width:900px;
-	min-height:700px;
 	opacity:0.8;
+	width: 100%;
 }
+
 .maindiv
 {
-	background-size: 100%;
-	position:relative;
-	min-width:1024px;
-	
+	height: 100%;
+	position: relative;
+	width: 100%;
 }
+
+/*
 .button {
-	background: white; 
+	background: white;
 	border-radius: 2em;
-	color: #000;  
+	color: #000;
 	font-size: 24px;
-	
 	padding: 1em 3em 1em 3em;
 	-moz-transition: background-color 0.35s ease-in-out, color 0.15s ease-in-out;
 	-webkit-transition: background-color 0.35s ease-in-out, color 0.15s ease-in-out;
@@ -40,24 +37,21 @@ body {
 	transition: background-color 0.35s ease-in-out, color 0.15s ease-in-out;
 }
 
+
 .button:hover {
 	background: rgba(255, 255, 255, 0.2) !important;
 	color: black;
 }
- 
+*/
+
 #main {
-	background: rgba(0, 0, 5, 0.9);
-	display: inline-block;
-	font-family: FontAwesome;
-	padding: 3em;
-	position: absolute;
-	top:6em;
-	left:15em;
-	width:60%;
+	background: rgba(0, 0, 15, .4);
+	margin: 0 auto;
+	margin-top: 10%;
 	overflow:hidden;
+	padding: 5em;
 	text-align: center;
-	min-width:400px;
-	min-height:400px;
+	width: 600px;
 }
 
 #main p {
@@ -109,15 +103,15 @@ body {
 }
 
 #feedbackdiv {
-	
+
 	font-size: 20px;
 	letter-spacing: 0.1em;
 	line-height: 2em;
 	margin: 0 10% 0;
 	width: 90%;
 	min-width:900px;
-	
-	
+
+
 }
 
 
@@ -126,6 +120,8 @@ body {
 	padding: 5em 0 5em 0;
 	text-align: center;
 }
+
+/*
 #dealerlogin {
 	background: rgba(0, 0, 127, 0.5);
 	border-color: rgba(145, 80, 255, 0.7);
@@ -144,3 +140,4 @@ body {
 	font-size: 18px;
 	text-decoration: none;
 }
+*/
