--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,18 @@ body {
 }
 
 #form-section {
-	height: 90%;
+	height: 100%;
+	min-height: 100%;
+	position: relative;
 }
 
 #form {
 	background: white;
 	box-shadow: 0 0 7px 7px #ccc;
-	height: 90%;
-	margin: 0 auto;
-	margin-top: 35px;
-	overflow: auto;
+	left: 10%;
+	min-height: 90%;
+	position: absolute;
+	top: 10%;
 	width: 80%;
 }
 
@@ -66,10 +68,8 @@ body {
 	font-size: 20px;
 	letter-spacing: 0.1em;
 	line-height: 2em;
-	margin: 0 10%;
-	margin-top: 40px;
-	position: relative;
-	width: 80%%;
+	margin: 0 auto;
+	width: 80%;
 }
 
 #form form table {
@@ -143,8 +143,8 @@ body {
 }
 
 .text {
-	font-size: 25px;
-	padding: 15px;
+	font-size: 1.2em;
+	padding: 0.3em;
 }
 
 /*
