--- a/css/altstyle.css
+++ b/css/altstyle.css
@@ -173,16 +173,7 @@ label {
         margin-right: 7px;
     }
 
-/* This is the class used for the dark-background areas. */
-.ribbon {
-    background: #2d3e50;
-    color: #aaa;
-}
 
-/* This is the class used for the footer */
-.footer {
-    background: #111;
-}
 
 .button-success {
     background: rgb(28, 184, 65);
@@ -263,6 +254,10 @@ label {
         width: 60%;
     }
 
+    .compare {
+        margin: 0 auto;
+        width: 80%;
+    }
 }
 
 @media (min-width: 64em) {
