--- a/css/altstyle.css
+++ b/css/altstyle.css
@@ -58,7 +58,44 @@ label {
     box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
 }
 .home-menu.pure-menu-open {
-    background: rgba(55, 76, 120, 0.5);
+    background: rgba(255,255, 255, 0.8);
+}
+
+#compare{
+	text-align: center;
+	font-weight: 400;
+	position:fixed;
+	bottom:10px;
+	right:-500px;
+	z-index: 5;
+
+border-top: 1px solid transparent;
+	border-bottom: 1px solid transparent;
+
+	border-left: 10px solid blue;
+border-top-left-radius:10px;
+border-bottom-left-radius:15px;
+    font-family: Arial;
+    font-weight: bold;
+    text-decoration: inherit;
+    padding: 8px 30px 8px 12px;
+    text-shadow: 1px 1px 1px #000;
+    -webkit-box-shadow: inset 1px 1px 0px 0px #cae3fc;
+    -moz-box-shadow: inset 1px 1px 0px 0px #cae3fc;
+    box-shadow: inset 1px 1px 0px 0px #cae3fc;
+    cursor: pointer;
+    color: #ffffff;
+    display: inline-block;
+    background: -webkit-linear-gradient(90deg, #4197ee 5%, #79bbff 100%);
+    background: -moz-linear-gradient(90deg, #4197ee 5%, #79bbff 100%);
+    background: -ms-linear-gradient(90deg, #4197ee 5%, #79bbff 100%);
+    background: linear-gradient(180deg, #79bbff 5%, #4197ee 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#79bbff",endColorstr="#4197ee");
+	display:none;
+}
+#compare:hover{
+
+	right:60px;
 }
 .pure-menu.pure-menu-open.pure-menu-fixed {
     /* Fixed menus normally have a border at the bottom. */
@@ -68,9 +105,10 @@ label {
 }
 
 .home-menu .pure-menu-heading {
-    color: white;
+    color: black;
     font-weight: 400;
     font-size: 120%;
+	float:left;
 }
 
 .home-menu .pure-menu-selected a {
@@ -78,15 +116,18 @@ label {
 }
 
 .home-menu a {
-    color: #6FBEFF;
+    color: #000;
     font-weight: 400;
     font-size: 120%;
+}
+.home-menu .pure-menu-dealer{
+	float:right;
 }
 .home-menu li a:hover,
 .home-menu li a:focus {
     background: none;
     border: none;
-    color: #AECFE5;
+    color: #2B88BA;
 }
 
 
@@ -146,7 +187,7 @@ label {
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
-    top: 92%;
+    top: 100%;
     width: 100%;
     min-height: 7%;
     z-index: 2;
@@ -263,7 +304,11 @@ label {
         text-align: right;
     }
 }
-
+@media (max-width: 35.5em) {
+.pure-menu-compare{
+        display: none;
+}
+}
 @media (max-width: 35.5em) {
     .header {
         display: none;
