--- a/css/altstyle.css
+++ b/css/altstyle.css
@@ -10,7 +10,7 @@
  */
 body {
     line-height: 1.7em;
-    color: #7f8c8d;
+    color: #000;
     font-size: 13px;
 }
 
@@ -21,7 +21,7 @@ h4,
 h5,
 h6,
 label {
-    color: #34495e;
+    color: #000;
 }
 
 .pure-img-responsive {
@@ -61,6 +61,8 @@ label {
     background: rgba(255,255, 255, 0.8);
 }
 
+
+
 #compare{
 	text-align: center;
 	font-weight: 400;
@@ -68,35 +70,33 @@ label {
 	bottom:10px;
 	right:-500px;
 	z-index: 5;
-
 border-top: 1px solid transparent;
 	border-bottom: 1px solid transparent;
 
-	border-left: 10px solid blue;
+	border-left: 7px solid rgba(71, 91, 237, 0.8);
 border-top-left-radius:10px;
 border-bottom-left-radius:15px;
     font-family: Arial;
     font-weight: bold;
     text-decoration: inherit;
     padding: 8px 30px 8px 12px;
-    text-shadow: 1px 1px 1px #000;
+    text-shadow: 1px 1px 4px #000;
     -webkit-box-shadow: inset 1px 1px 0px 0px #cae3fc;
     -moz-box-shadow: inset 1px 1px 0px 0px #cae3fc;
     box-shadow: inset 1px 1px 0px 0px #cae3fc;
     cursor: pointer;
     color: #ffffff;
-    display: inline-block;
-    background: -webkit-linear-gradient(90deg, #4197ee 5%, #79bbff 100%);
-    background: -moz-linear-gradient(90deg, #4197ee 5%, #79bbff 100%);
-    background: -ms-linear-gradient(90deg, #4197ee 5%, #79bbff 100%);
-    background: linear-gradient(180deg, #79bbff 5%, #4197ee 100%);
+    background: -webkit-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
+    background: -moz-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
+    background: -ms-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
+    background: linear-gradient(180deg, rgba(121, 187, 255, 0.5) 5%,rgba(65, 131, 238, 0.5) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#79bbff",endColorstr="#4197ee");
+	
+	opacity:0.1;
 	display:none;
+	
 }
-#compare:hover{
 
-	right:60px;
-}
 .pure-menu.pure-menu-open.pure-menu-fixed {
     /* Fixed menus normally have a border at the bottom. */
     border-bottom: none;
