--- a/css/altstyle.css
+++ b/css/altstyle.css
@@ -1,17 +1,17 @@
 * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /*
- * -- BASE STYLES --
- * Most of these are inherited from Base, but I want to change a few.
- */
+* -- BASE STYLES --
+* Most of these are inherited from Base, but I want to change a few.
+*/
 body {
-    line-height: 1.7em;
-    color: #000;
-    font-size: 13px;
+  line-height: 1.7em;
+  color: #000;
+  font-size: 13px;
 }
 
 h1,
@@ -21,307 +21,303 @@ h4,
 h5,
 h6,
 label {
-    color: #000;
+  color: #000;
 }
 
 .pure-img-responsive {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /*
- * -- LAYOUT STYLES --
- * These are some useful classes which I will need
- */
+* -- LAYOUT STYLES --
+* These are some useful classes which I will need
+*/
 .l-box {
-    padding: 1em;
+  padding: 1em;
 }
 
 .l-box-lrg {
-    padding: 2em;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
+  padding: 2em;
+  border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 
 .is-center {
-    text-align: center;
+  text-align: center;
 }
 
 
 /*
- * -- MENU STYLES --
- * I want to customize how my .pure-menu looks at the top of the page
- */
+* -- MENU STYLES --
+* I want to customize how my .pure-menu looks at the top of the page
+*/
 
 .home-menu {
-    padding: 0.2em;
-    text-align: center;
-    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
+  padding: 0.1em;
+  text-align: center;
+  box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
 }
 .home-menu.pure-menu-open {
-    background: rgba(255,255, 255, 0.8);
+  background: rgba(15, 53, 161, 0.8)/* #3b5998*/;
 }
 
 
 
 #compare{
-	text-align: center;
-	font-weight: 400;
-	position:fixed;
-	bottom:10px;
-	right:-500px;
-	z-index: 5;
-border-top: 1px solid transparent;
-	border-bottom: 1px solid transparent;
+  text-align: center;
+  font-weight: 400;
+  position:fixed;
+  bottom:10px;
+  right:-500px;
+  z-index: 5;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 
-	border-left: 7px solid rgba(71, 91, 237, 0.8);
-border-top-left-radius:10px;
-border-bottom-left-radius:15px;
-    font-family: Arial;
-    font-weight: bold;
-    text-decoration: inherit;
-    padding: 8px 30px 8px 12px;
-    text-shadow: 1px 1px 4px #000;
-    -webkit-box-shadow: inset 1px 1px 0px 0px #cae3fc;
-    -moz-box-shadow: inset 1px 1px 0px 0px #cae3fc;
-    box-shadow: inset 1px 1px 0px 0px #cae3fc;
-    cursor: pointer;
-    color: #ffffff;
-    background: -webkit-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
-    background: -moz-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
-    background: -ms-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
-    background: linear-gradient(180deg, rgba(121, 187, 255, 0.5) 5%,rgba(65, 131, 238, 0.5) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#79bbff",endColorstr="#4197ee");
-
-	opacity:0.1;
-	display:none;
+  border-left: 7px solid rgba(71, 91, 237, 0.8);
+  border-top-left-radius:10px;
+  border-bottom-left-radius:15px;
+  font-family: Arial;
+  font-weight: bold;
+  text-decoration: inherit;
+  padding: 8px 30px 8px 12px;
+  text-shadow: 1px 1px 4px #000;
+  -webkit-box-shadow: inset 1px 1px 0px 0px #cae3fc;
+  -moz-box-shadow: inset 1px 1px 0px 0px #cae3fc;
+  box-shadow: inset 1px 1px 0px 0px #cae3fc;
+  cursor: pointer;
+  color: #ffffff;
+  background: -webkit-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
+  background: -moz-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
+  background: -ms-linear-gradient(90deg, rgba(65, 131, 238, 0.5) 5%, rgba(121, 187, 255, 0.5) 100%);
+  background: linear-gradient(180deg, rgba(121, 187, 255, 0.5) 5%,rgba(65, 131, 238, 0.5) 100%);
+  opacity:0.1;
+  display:none;
 
 }
 
 .pure-menu.pure-menu-open.pure-menu-fixed {
-    /* Fixed menus normally have a border at the bottom. */
-    border-bottom: none;
-    /* I need a higher z-index here because of the scroll-over effect. */
-    z-index: 4;
+  /* Fixed menus normally have a border at the bottom. */
+  border-bottom: none;
+  /* I need a higher z-index here because of the scroll-over effect. */
+  z-index: 4;
 }
 
 .home-menu .pure-menu-heading {
-    color: black;
-    font-weight: 400;
-    font-size: 120%;
-	float:left;
+  color: white;
+  font-size: 1.1em;
+  font-weight: 400;
+  float:left;
 }
 
 .home-menu .pure-menu-selected a {
-    color: white;
+  color: white;
 }
 
 .home-menu a {
-    color: #000;
-    font-weight: 400;
-    font-size: 120%;
+  color: #fff;
+  font-size: 1.1em;
+  font-weight: 400;
 }
 .home-menu .pure-menu-dealer{
-	float:right;
+  float:right;
 }
 .home-menu li a:hover,
 .home-menu li a:focus {
-    background: none;
-    border: none;
-    color: #2B88BA;
+  background: rgba(15, 53, 111, 0.7);
 }
 
+.home-menu li:first-child {
+  border-right: 1px solid rgba(15, 0, 161, 0.5);
+  padding-right: 2em;
+}
 
 /*
- * -- SPLASH STYLES --
- * This is the blue top section that appears on the page.
- */
+* -- SPLASH STYLES --
+* This is the blue top section that appears on the page.
+*/
 
 .splash-container {
-    background: #1f8dd6 url(images/car4.jpg);
-    background-size: cover;
-    z-index: 1;
-    overflow: hidden;
-    /* The following styles are required for the "scroll-over" effect */
-    width: 100%;
-    height: 93%;
-    top: 0;
-    left: 0;
-    position: fixed !important;
+  background: #1f8dd6 url(images/car4.jpg);
+  background-size: cover;
+  z-index: 1;
+  overflow: hidden;
+  /* The following styles are required for the "scroll-over" effect */
+  width: 100%;
+  height: 93%;
+  top: 0;
+  left: 0;
+  position: fixed !important;
 }
 
 .splash {
-    /* absolute center .splash within .splash-container */
-    background: rgba(0, 0, 0, 0.5);
-    width: 80%;
-    height: 50%;
-    margin: auto;
-    position: absolute;
-    top: 100px; left: 0; bottom: 0; right: 0;
-    text-align: center;
-    text-transform: uppercase;
+  /* absolute center .splash within .splash-container */
+  background: rgba(0, 0, 0, 0.5);
+  width: 80%;
+  height: 50%;
+  margin: auto;
+  position: absolute;
+  top: 100px; left: 0; bottom: 0; right: 0;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* This is the main heading that appears on the blue section */
 .splash-head {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    padding: 1em 0 0.2em 0;
-    font-weight: 100;
-    line-height: 1em;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  padding: 1em 0 0.2em 0;
+  font-weight: 100;
+  line-height: 1em;
 }
 
 /* This is the subheading that appears on the blue section */
 .splash-subhead {
-    color: white;
-    letter-spacing: 0.05em;
-    margin: 0 auto;
-    opacity: 0.8;
-    width: 80%;
+  color: white;
+  letter-spacing: 0.05em;
+  margin: 0 auto;
+  opacity: 0.8;
+  width: 80%;
 }
 
 /*
- * -- CONTENT STYLES --
- * This represents the content area (everything below the blue section)
- */
+* -- CONTENT STYLES --
+* This represents the content area (everything below the blue section)
+*/
 .content-wrapper {
-    /* These styles are required for the "scroll-over" effect */
-    position: absolute;
-    top: 100%;
-    width: 100%;
-    min-height: 7%;
-    z-index: 2;
-    background: white;
+  /* These styles are required for the "scroll-over" effect */
+  position: absolute;
+  top: 100%;
+  width: 100%;
+  min-height: 7%;
+  z-index: 2;
+  background: white;
 }
 
 /* This is the class used for the main content headers (<h2>) */
 .content-head {
-    font-weight: 400;
-    letter-spacing: 0.1em;
-    text-align: center;
+  font-weight: 400;
+  letter-spacing: 0.1em;
+  text-align: center;
 }
 
 /* This is a modifier class used when the content-head is inside a ribbon */
 .content-head-ribbon {
-    color: white;
+  color: white;
 }
 
 /* This is the class used for the content sub-headers (<h3>) */
 .content-subhead {
-    color: #1f8dd6;
+  color: #1f8dd6;
 }
-    .content-subhead i {
-        margin-right: 7px;
-    }
+.content-subhead i {
+  margin-right: 7px;
+}
 
 .button-success {
-    background: rgb(28, 184, 65);
+  background: rgb(28, 184, 65);
 }
 
 .button-xlarge {
-    font-size: 125%;
+  font-size: 125%;
 }
 .pure-form-aligned .pure-control-group label {
-    text-align: left;
-    width: 80%;
+  text-align: left;
+  width: 80%;
 }
 
 .pure-form-aligned .pure-controls{
-    margin-left: 0;
+  margin-left: 0;
 }
 
 .footer {
-    border-top: 1px solid #eee;
-    background: rgb(250, 250, 250);
-    font-size: 85%;
-    margin-top: 4em;
-    padding: 1em;
+  border-top: 1px solid #eee;
+  background: rgb(250, 250, 250);
+  font-size: 85%;
+  margin-top: 4em;
+  padding: 1em;
 }
 
 .footer-content {
-    margin-left: 5em;
+  margin-left: 5em;
 }
 /*
- * -- TABLET (AND UP) MEDIA QUERIES --
- * On tablets and other medium-sized devices, we want to customize some
- * of the mobile styles.
- */
+* -- TABLET (AND UP) MEDIA QUERIES --
+* On tablets and other medium-sized devices, we want to customize some
+* of the mobile styles.
+*/
 @media (min-width: 48em) {
 
-    /* We increase the body font size */
-    body {
-        font-size: 16px;
-    }
-    /* We want to give the content area some more padding */
-    .content {
-        padding: 1em;
-    }
+  /* We increase the body font size */
+  body {
+    font-size: 16px;
+  }
+  /* We want to give the content area some more padding */
+  .content {
+    padding: 1em;
+  }
 
-    /* We can align the menu header to the left, but float the
-    menu items to the right. */
-    .home-menu {
-        text-align: left;
-    }
-        .home-menu ul {
-            float: right;
-        }
+  /* We can align the menu header to the left, but float the
+  menu items to the right. */
+  .home-menu {
+    text-align: left;
+  }
+  .home-menu ul {
+    float: right;
+  }
 
-    /* We increase the height of the splash-container */
-/*    .splash-container {
-        height: 500px;
-    }*/
+  /* We increase the height of the splash-container */
+  /*    .splash-container {
+  height: 500px;
+  }*/
 
-    /* We decrease the width of the .splash, since we have more width
-    to work with */
-    .splash {
-        width: 50%;
-        height: 50%;
-    }
+  /* We decrease the width of the .splash, since we have more width
+  to work with */
+  .splash {
+    width: 50%;
+    height: 50%;
+  }
 
-    .splash-head {
-        font-size: 250%;
-    }
+  .splash-head {
+    font-size: 250%;
+  }
 
 
-    /* We remove the border-separator assigned to .l-box-lrg */
-    .l-box-lrg {
-        border: none;
-    }
+  /* We remove the border-separator assigned to .l-box-lrg */
+  .l-box-lrg {
+    border: none;
+  }
 
-    .feedback {
-        margin: 0 auto;
-        width: 60%;
-    }
+  .feedback {
+    margin: 0 auto;
+    width: 60%;
+  }
 
-    .compare {
-        margin: 0 auto;
-        width: 80%;
-    }
+  .compare {
+    margin: 0 auto;
+    width: 80%;
+  }
 }
 
 @media (min-width: 64em) {
-    .pure-form-aligned .pure-control-group label {
-        text-align: right;
-    }
+  .pure-form-aligned .pure-control-group label {
+    text-align: right;
+  }
 }
+
 @media (max-width: 35.5em) {
-.pure-menu-compare{
-        display: none;
-}
-}
-@media (max-width: 35.5em) {
-    .header {
-        display: none;
-    }
+  .header {
+    display: none;
+  }
 }
 /*
- * -- DESKTOP (AND UP) MEDIA QUERIES --
- * On desktops and other large devices, we want to over-ride some
- * of the mobile and tablet styles.
- */
+* -- DESKTOP (AND UP) MEDIA QUERIES --
+* On desktops and other large devices, we want to over-ride some
+* of the mobile and tablet styles.
+*/
 @media (min-width: 78em) {
-    /* We increase the header font size even more */
-    .splash-head {
-        font-size: 300%;
-    }
+  /* We increase the header font size even more */
+  .splash-head {
+    font-size: 300%;
+  }
 }
