--- a/css/altstyle.css
+++ b/css/altstyle.css
@@ -230,6 +230,15 @@ label {
   margin-left: 0;
 }
 
+.dealersearch {
+  margin: 0 auto;
+  width: 80%;
+}
+
+.contact {
+  text-align: left;
+}
+
 .footer {
   border-top: 1px solid #eee;
   background: rgb(250, 250, 250);
@@ -240,6 +249,12 @@ label {
 
 .footer-content {
   margin-left: 5em;
+}
+
+
+.white-popup {
+  margin: 0 auto;
+  width: 50%;
 }
 /*
 * -- TABLET (AND UP) MEDIA QUERIES --
@@ -306,7 +321,7 @@ label {
 }
 
 @media (max-width: 35.5em) {
-  .header {
+  .home-menu li:nth-child(odd) {
     display: none;
   }
 }
