--- a/css/altstyle.css
+++ b/css/altstyle.css
@@ -167,7 +167,6 @@ label {
   font-weight: bold;
   color: white;
   padding: 1em 0 0.2em 0;
-  font-weight: 100;
   line-height: 1em;
 }
 
@@ -230,15 +229,35 @@ label {
   margin-left: 0;
 }
 
-.dealersearch {
-  margin: 0 auto;
-  width: 80%;
+.price {
+  color: white;
+  font-size: 1.1em;
+  font-weight: bold;
 }
 
-.contact {
+#dealers {
+  padding-top: 2%;
+}
+
+.mainbox {
+  text-align: center;
+}
+
+.dscontainer {
+  display: inline-block;
   text-align: left;
 }
 
+.dealersearch {
+  margin: 0 auto;
+  text-align: left;
+  width: 80%;
+}
+
+.white-popup {
+  display: table;
+  margin: 0 auto;
+}
 .footer {
   border-top: 1px solid #eee;
   background: rgb(250, 250, 250);
@@ -252,10 +271,6 @@ label {
 }
 
 
-#details {
-  margin: 0 auto;
-  width: 20%;
-}
 /*
 * -- TABLET (AND UP) MEDIA QUERIES --
 * On tablets and other medium-sized devices, we want to customize some
@@ -323,6 +338,18 @@ label {
 @media (max-width: 35.5em) {
   .home-menu li:nth-child(odd) {
     display: none;
+  }
+
+  #dssubmit {
+    margin-left: 30%;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 48em) {
+  .content {
+    max-width: 96%;
+    margin: 0 auto;
   }
 }
 /*
